--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "axios": "^0.16.1",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
+    "vue-focus": "^2.1.0",
     "vue-js-modal": "^1.3.6",
     "vue-router": "^2.5.3",
+    "vue-youtube-embed": "^2.1.3",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
