--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "build": {
     "productName": "swishbox",
-    "appId": "org.simulatedgreg.electron-vue",
+    "appId": "com.encadyma.swishbox",
     "directories": {
       "output": "build"
     },
@@ -61,6 +61,7 @@
     "vue-electron": "^1.0.6",
     "vue-focus": "^2.1.0",
     "vue-js-modal": "^1.3.6",
+    "vue-notification": "^1.3.4",
     "vue-router": "^2.5.3",
     "vue-youtube-embed": "^2.1.3",
     "vuex": "^2.3.1"
