--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue-js-modal": "^1.3.6",
     "vue-notification": "^1.3.4",
     "vue-router": "^2.5.3",
+    "vue-scroll": "^2.1.3",
     "vue-youtube-embed": "^2.1.3",
     "vuex": "^2.3.1"
   },
