--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "vue-router": "^2.5.3",
     "vue-scroll": "^2.1.3",
     "vue-youtube-embed": "^2.1.3",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "ytdl-core": "^0.18.5"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
