--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "fluent-ffmpeg": "^2.1.2",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-focus": "^2.1.0",
