--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     }
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.13",
     "axios": "^0.16.1",
+    "ffbinaries": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
