Product name changed to "Swishbox Nightly" & removed ffmpeg reference in home page

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "swishbox",
+    "productName": "Swishbox Nightly",
     "appId": "com.encadyma.swishbox",
     "directories": {
       "output": "build"
