License + description change

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "swishbox",
   "version": "0.0.1",
   "author": "Kevin Mo <encadyma>",
-  "description": "Swishbox is a Youtube music player.",
-  "license": "MIT",
+  "description": "Experimental desktop music player for those who use Youtube for music.",
+  "license": "GPL-3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
