--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     }
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.0.13",
     "axios": "^0.16.1",
     "ffbinaries": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
+    "node-notifier": "^5.1.2",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-focus": "^2.1.0",
@@ -67,7 +67,6 @@
     "vue-notification": "^1.3.4",
     "vue-router": "^2.5.3",
     "vue-scroll": "^2.1.3",
-    "vue-youtube-embed": "^2.1.3",
     "vuex": "^2.3.1",
     "ytdl-core": "^0.18.5"
   },
