--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "axios": "^0.16.1",
     "ffbinaries": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
-    "node-notifier": "^5.1.2",
+    "request": "^2.83.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-focus": "^2.1.0",
